k8s-manifests/overlays/qa/superapp/client/loan/patch/qa-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yabex
spec:
  replicas: 1
  template:
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: yabex
        image: superapp-registry.cbe.com.et:5000/cbe-superapp/yabex-qa:latest
        imagePullPolicy: Always
