k8s-manifests/overlays/qa/superapp/client/loan/patch/route-patch.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: yabex-route
spec:
  path: /api/v1/cbesuperapp/yabex
  to:
    name: yabex-qa
    weight: 100
    kind: Service
  host: qaapisuperapp.cbe.com.et
  port:
    targetPort: 8080

---

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: vault-route
spec:
  path: /api/v1/cbesuperapp/vault
  to:
    name: vault-qa
    weight: 100
    kind: Service
  host: qaapisuperapp.cbe.com.et
  port:
    targetPort: 8080


---

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: voucher-route
spec:
  path: /api/v1/cbesuperapp/voucher
  to:
    name: voucher-qa
    weight: 100
    kind: Service
  host: qaapisuperapp.cbe.com.et
  port:
    targetPort: 8080


---

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: standing-order-route
spec:
  path: /api/v1/cbesuperapp/standing_order
  to:
    name: standing-order-qa
    weight: 100
    kind: Service
  host: qaapisuperapp.cbe.com.et
  port:
    targetPort: 8080
